@@ -7,13 +7,7 @@
 
 package eu.darkcube.system.inventory.api.util;
 
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-
+import com.google.gson.Gson;
 import org.apache.commons.lang.Validate;
 import org.bukkit.Bukkit;
 import org.bukkit.ChatColor;
@@ -28,29 +22,31 @@ import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.inventory.meta.SkullMeta;
 import org.bukkit.material.MaterialData;
 
-import com.google.gson.Gson;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 /**
- * 
- * ItemBuilder - API Class to create a {@link org.bukkit.inventory.ItemStack}
- * with just one line of Code
- * 
- * @version 1.8
- * 
+ * ItemBuilder - API Class to create a {@link org.bukkit.inventory.ItemStack} with just one line of
+ * Code
+ *
  * @author Acquized
- * 
+ * @version 1.8
  * @contributor Kev575
  * @contributor DasBabyPixel
- * 
  */
 
 public class ItemBuilder {
 
+	private String skullOwner;
 	private ItemStack item;
 
 	private ItemMeta meta;
 
-	private Material material = Material.STONE;
+	private Material material;
 
 	private int amount = 1;
 
@@ -86,7 +82,7 @@ public class ItemBuilder {
 	public ItemBuilder(Material material, int amount) {
 		if (material == null)
 			material = Material.AIR;
-		if (((amount > material.getMaxStackSize()) || (amount <= 0)) && (!this.unsafeStackSize))
+		if (amount > material.getMaxStackSize() || amount <= 0)
 			amount = 1;
 		this.amount = amount;
 		this.item = new ItemStack(material, amount);
@@ -94,8 +90,7 @@ public class ItemBuilder {
 	}
 
 	/**
-	 * Initalizes the ItemBuilder with {@link org.bukkit.Material}, Amount and
-	 * Displayname
+	 * Initalizes the ItemBuilder with {@link org.bukkit.Material}, Amount and Displayname
 	 */
 	public ItemBuilder(Material material, int amount, String displayname) {
 		if (material == null)
@@ -103,7 +98,7 @@ public class ItemBuilder {
 		Validate.notNull(displayname, "The Displayname is null.");
 		this.item = new ItemStack(material, amount);
 		this.material = material;
-		if (((amount > material.getMaxStackSize()) || (amount <= 0)) && (!this.unsafeStackSize))
+		if (amount > material.getMaxStackSize() || amount <= 0)
 			amount = 1;
 		this.amount = amount;
 		this.displayname = displayname;
@@ -137,9 +132,7 @@ public class ItemBuilder {
 			List<String> mlore = this.meta.getLore();
 			if (mlore != null)
 				this.lore.addAll(mlore);
-			for (ItemFlag f : this.meta.getItemFlags()) {
-				this.flags.add(f);
-			}
+			this.flags.addAll(this.meta.getItemFlags());
 			if (this.meta instanceof FireworkEffectMeta) {
 				if (((FireworkEffectMeta) this.meta).hasEffect()) {
 					this.fireworkEffect = ((FireworkEffectMeta) this.meta).getEffect();
@@ -150,8 +143,8 @@ public class ItemBuilder {
 
 	/**
 	 * Same as {@link #ItemBuilder(Material)}
-	 * 
-	 * @param material
+	 *
+	 * @param material The Material
 	 * @return {@link #ItemBuilder(Material)}
 	 */
 	public static ItemBuilder item(Material material) {
@@ -159,8 +152,8 @@ public class ItemBuilder {
 	}
 
 	/**
-	 * Initalizes the ItemBuilder with a
-	 * {@link org.bukkit.configuration.file.FileConfiguration} ItemStack in Path
+	 * Initalizes the ItemBuilder with a {@link org.bukkit.configuration.file.FileConfiguration}
+	 * ItemStack in Path
 	 */
 	public ItemBuilder(FileConfiguration cfg, String path) {
 		this(cfg.getItemStack(path));
@@ -168,9 +161,8 @@ public class ItemBuilder {
 
 	/**
 	 * Initalizes the ItemBuilder with an already existing {@link ItemBuilder}
-	 * 
-	 * @deprecated Use the already initalized {@code ItemBuilder} Instance to
-	 *             improve performance
+	 *
+	 * @deprecated Use the already initalized {@code ItemBuilder} Instance to improve performance
 	 */
 	@Deprecated
 	public ItemBuilder(ItemBuilder builder) {
@@ -182,21 +174,24 @@ public class ItemBuilder {
 		this.amount = builder.amount;
 		this.damage = builder.damage;
 		this.data = builder.data;
-		this.damage = builder.damage;
+		this.andSymbol = builder.andSymbol;
+		this.unsafeStackSize = builder.unsafeStackSize;
 		this.enchantments = builder.enchantments;
 		this.displayname = builder.displayname;
 		this.fireworkEffect = builder.fireworkEffect;
+		this.skullOwner = builder.skullOwner;
 		this.lore.addAll(builder.lore);
 		this.flags.addAll(builder.flags);
 	}
 
 	/**
 	 * Sets the Amount of the ItemStack
-	 * 
+	 *
 	 * @param amount Amount for the ItemStack
 	 */
 	public ItemBuilder amount(int amount) {
-		if (((amount > this.material.getMaxStackSize()) || (amount <= 0)) && (!this.unsafeStackSize))
+		if (((amount > this.material.getMaxStackSize()) || (amount <= 0))
+				&& (!this.unsafeStackSize))
 			amount = 1;
 		this.amount = amount;
 		return this;
@@ -204,7 +199,7 @@ public class ItemBuilder {
 
 	/**
 	 * Sets the {@link org.bukkit.material.MaterialData} of the ItemStack
-	 * 
+	 *
 	 * @param data MaterialData for the ItemStack
 	 */
 	public ItemBuilder data(MaterialData data) {
@@ -215,7 +210,7 @@ public class ItemBuilder {
 
 	/**
 	 * Sets the Damage of the ItemStack
-	 * 
+	 *
 	 * @param damage Damage for the ItemStack
 	 * @deprecated Use {@code ItemBuilder#durability}
 	 */
@@ -227,7 +222,7 @@ public class ItemBuilder {
 
 	/**
 	 * Sets the Durability (Damage) of the ItemStack
-	 * 
+	 *
 	 * @param damage Damage for the ItemStack
 	 */
 	public ItemBuilder durability(int damage) {
@@ -237,7 +232,7 @@ public class ItemBuilder {
 
 	/**
 	 * Sets the {@link org.bukkit.Material} of the ItemStack
-	 * 
+	 *
 	 * @param material Material for the ItemStack
 	 */
 	public ItemBuilder material(Material material) {
@@ -248,21 +243,22 @@ public class ItemBuilder {
 
 	/**
 	 * Sets the {@link org.bukkit.inventory.meta.ItemMeta} of the ItemStack
-	 * 
+	 *
 	 * @param meta Meta for the ItemStack
 	 */
 	public ItemBuilder meta(ItemMeta meta) {
 		Validate.notNull(meta, "The Meta is null.");
 		this.meta = meta;
 		this.unbreakable = meta.spigot().isUnbreakable();
+		this.item.setItemMeta(meta);
 		return this;
 	}
 
 	/**
 	 * Adds a {@link org.bukkit.enchantments.Enchantment} to the ItemStack
-	 * 
+	 *
 	 * @param enchant Enchantment for the ItemStack
-	 * @param level   Level of the Enchantment
+	 * @param level Level of the Enchantment
 	 */
 	public ItemBuilder enchant(Enchantment enchant, int level) {
 		Validate.notNull(enchant, "The Enchantment is null.");
@@ -272,7 +268,7 @@ public class ItemBuilder {
 
 	/**
 	 * Adds a list of {@link org.bukkit.enchantments.Enchantment} to the ItemStack
-	 * 
+	 *
 	 * @param enchantments Map containing Enchantment and Level for the ItemStack
 	 */
 	public ItemBuilder enchant(Map<Enchantment, Integer> enchantments) {
@@ -283,18 +279,20 @@ public class ItemBuilder {
 
 	/**
 	 * Sets the Displayname of the ItemStack
-	 * 
+	 *
 	 * @param displayname Displayname for the ItemStack
 	 */
 	public ItemBuilder displayname(String displayname) {
 		Validate.notNull(displayname, "The Displayname is null.");
-		this.displayname = this.andSymbol ? ChatColor.translateAlternateColorCodes('&', displayname) : displayname;
+		this.displayname = this.andSymbol
+				? ChatColor.translateAlternateColorCodes('&', displayname)
+				: displayname;
 		return this;
 	}
 
 	/**
 	 * Adds a Line to the Lore of the ItemStack
-	 * 
+	 *
 	 * @param line Line of the Lore for the ItemStack
 	 */
 	public ItemBuilder lore(String line) {
@@ -305,7 +303,7 @@ public class ItemBuilder {
 
 	/**
 	 * Sets the Lore of the ItemStack
-	 * 
+	 *
 	 * @param lore List containing String as Lines for the ItemStack Lore
 	 */
 	public ItemBuilder lore(List<String> lore) {
@@ -317,7 +315,7 @@ public class ItemBuilder {
 
 	/**
 	 * Adds one or more Lines to the Lore of the ItemStack
-	 * 
+	 *
 	 * @param lines One or more Strings for the ItemStack Lore
 	 * @deprecated Use {@code ItemBuilder#lore}
 	 */
@@ -332,7 +330,7 @@ public class ItemBuilder {
 
 	/**
 	 * Adds one or more Lines to the Lore of the ItemStack
-	 * 
+	 *
 	 * @param lines One or more Strings for the ItemStack Lore
 	 */
 	public ItemBuilder lore(String... lines) {
@@ -345,19 +343,20 @@ public class ItemBuilder {
 
 	/**
 	 * Adds a String at a specified position in the Lore of the ItemStack
-	 * 
-	 * @param line  Line of the Lore for the ItemStack
+	 *
+	 * @param line Line of the Lore for the ItemStack
 	 * @param index Position in the Lore for the ItemStack
 	 */
 	public ItemBuilder lore(String line, int index) {
 		Validate.notNull(line, "The Line is null.");
-		this.lore.set(index, this.andSymbol ? ChatColor.translateAlternateColorCodes('&', line) : line);
+		this.lore.set(index,
+				this.andSymbol ? ChatColor.translateAlternateColorCodes('&', line) : line);
 		return this;
 	}
 
 	/**
 	 * Adds a {@link org.bukkit.inventory.ItemFlag} to the ItemStack
-	 * 
+	 *
 	 * @param flag ItemFlag for the ItemStack
 	 */
 	public ItemBuilder flag(ItemFlag flag) {
@@ -368,7 +367,7 @@ public class ItemBuilder {
 
 	/**
 	 * Adds more than one {@link org.bukkit.inventory.ItemFlag} to the ItemStack
-	 * 
+	 *
 	 * @param flags List containing all ItemFlags
 	 */
 	public ItemBuilder flag(List<ItemFlag> flags) {
@@ -380,11 +379,11 @@ public class ItemBuilder {
 
 	/**
 	 * Makes or removes the Unbreakable Flag from the ItemStack
-	 * 
+	 *
 	 * @param unbreakable If it should be unbreakable
 	 */
 	public ItemBuilder unbreakable(boolean unbreakable) {
-//		this.meta.spigot().setUnbreakable(unbreakable);
+		//		this.meta.spigot().setUnbreakable(unbreakable);
 		this.unbreakable = unbreakable;
 		return this;
 	}
@@ -398,14 +397,15 @@ public class ItemBuilder {
 
 	/** Makes the ItemStack Glow like it had a Enchantment */
 	public ItemBuilder glow() {
-		this.enchant(this.material != Material.BOW ? Enchantment.ARROW_INFINITE : Enchantment.LUCK, 10);
+		this.enchant(this.material != Material.BOW ? Enchantment.ARROW_INFINITE : Enchantment.LUCK,
+				10);
 		this.flag(ItemFlag.HIDE_ENCHANTS);
 		return this;
 	}
 
 	/**
 	 * Sets the {@link FireworkEffect} for the ItemStack
-	 * 
+	 *
 	 * @param effect FireworkEffect for the ItemStack
 	 */
 	public ItemBuilder fireworkEffect(FireworkEffect effect) {
@@ -415,17 +415,20 @@ public class ItemBuilder {
 
 	/**
 	 * Sets the Skin for the Skull
-	 * 
-	 * @param user Username of the Skull
-	 * @deprecated Make it yourself - This Meta destrys the already setted Metas
+	 *
+	 * @param owner Username of the Skull
 	 */
-	@Deprecated
-	public ItemBuilder owner(String user) {
-		Validate.notNull(user, "The Username is null.");
-		if ((this.material == Material.SKULL_ITEM) || (this.material == Material.SKULL)) {
-			((SkullMeta) this.meta).setOwner(user);
-		}
+	public ItemBuilder owner(String owner) {
+		Validate.notNull(owner, "The Username is null.");
+		this.skullOwner = owner;
 		return this;
+	}
+
+	/**
+	 * @return the owner of this skull
+	 */
+	public String owner() {
+		return skullOwner;
 	}
 
 	/** Returns the Unsafe Class containing NBT Methods */
@@ -439,7 +442,7 @@ public class ItemBuilder {
 
 	/**
 	 * Toggles replacement of the '&' Characters in Strings
-	 * 
+	 *
 	 * @deprecated Use {@code ItemBuilder#toggleReplaceAndSymbol}
 	 */
 	@Deprecated
@@ -450,7 +453,7 @@ public class ItemBuilder {
 
 	/**
 	 * Enables / Disables replacement of the '&' Character in Strings
-	 * 
+	 *
 	 * @param replace Determinates if it should be replaced or not
 	 */
 	public ItemBuilder replaceAndSymbol(boolean replace) {
@@ -466,7 +469,7 @@ public class ItemBuilder {
 
 	/**
 	 * Allows / Disallows Stack Sizes under 1 and above 64
-	 * 
+	 *
 	 * @param allow Determinates if it should be allowed or not
 	 */
 	public ItemBuilder unsafeStackSize(boolean allow) {
@@ -497,7 +500,7 @@ public class ItemBuilder {
 
 	/**
 	 * Returns the Damage
-	 * 
+	 *
 	 * @deprecated Use {@code ItemBuilder#getDurability}
 	 */
 	@Deprecated
@@ -547,7 +550,7 @@ public class ItemBuilder {
 
 	/**
 	 * Returns all Lores
-	 * 
+	 *
 	 * @deprecated Use {@code ItemBuilder#getLores}
 	 */
 	@Deprecated
@@ -557,8 +560,8 @@ public class ItemBuilder {
 
 	/**
 	 * Converts the Item to a ConfigStack and writes it to path
-	 * 
-	 * @param cfg  Configuration File to which it should be writed
+	 *
+	 * @param cfg Configuration File to which it should be writed
 	 * @param path Path to which the ConfigStack should be writed
 	 */
 	public ItemBuilder toConfig(FileConfiguration cfg, String path) {
@@ -568,8 +571,8 @@ public class ItemBuilder {
 
 	/**
 	 * Converts back the ConfigStack to a ItemBuilder
-	 * 
-	 * @param cfg  Configuration File from which it should be read
+	 *
+	 * @param cfg Configuration File from which it should be read
 	 * @param path Path from which the ConfigStack should be read
 	 */
 	public ItemBuilder fromConfig(FileConfiguration cfg, String path) {
@@ -578,9 +581,9 @@ public class ItemBuilder {
 
 	/**
 	 * Converts the Item to a ConfigStack and writes it to path
-	 * 
-	 * @param cfg     Configuration File to which it should be writed
-	 * @param path    Path to which the ConfigStack should be writed
+	 *
+	 * @param cfg Configuration File to which it should be writed
+	 * @param path Path to which the ConfigStack should be writed
 	 * @param builder Which ItemBuilder should be writed
 	 */
 	public static void toConfig(FileConfiguration cfg, String path, ItemBuilder builder) {
@@ -589,7 +592,7 @@ public class ItemBuilder {
 
 	/**
 	 * Converts the ItemBuilder to a JsonItemBuilder
-	 * 
+	 *
 	 * @return The ItemBuilder as JSON String
 	 */
 	public String toJson() {
@@ -598,7 +601,7 @@ public class ItemBuilder {
 
 	/**
 	 * Converts the ItemBuilder to a JsonItemBuilder
-	 * 
+	 *
 	 * @param builder Which ItemBuilder should be converted
 	 * @return The ItemBuilder as JSON String
 	 */
@@ -608,7 +611,7 @@ public class ItemBuilder {
 
 	/**
 	 * Converts the JsonItemBuilder back to a ItemBuilder
-	 * 
+	 *
 	 * @param json Which JsonItemBuilder should be converted
 	 */
 	public static ItemBuilder fromJson(String json) {
@@ -617,8 +620,8 @@ public class ItemBuilder {
 
 	/**
 	 * Applies the currently ItemBuilder to the JSONItemBuilder
-	 * 
-	 * @param json      Already existing JsonItemBuilder
+	 *
+	 * @param json Already existing JsonItemBuilder
 	 * @param overwrite Should the JsonItemBuilder used now
 	 */
 	public ItemBuilder applyJson(String json, boolean overwrite) {
@@ -631,18 +634,16 @@ public class ItemBuilder {
 			this.data = b.data;
 		if (b.material != null)
 			this.material = b.material;
-		if (b.lore != null) {
-			this.lore.clear();
-			this.lore.addAll(b.lore);
-		}
+		this.lore.clear();
+		this.lore.addAll(b.lore);
 		if (b.enchantments != null)
 			this.enchantments = b.enchantments;
 		if (b.item != null)
 			this.item = b.item;
-		if (b.flags != null) {
-			this.flags.clear();
-			this.flags.addAll(b.flags);
-		}
+		this.skullOwner = b.skullOwner;
+		this.fireworkEffect = b.fireworkEffect;
+		this.flags.clear();
+		this.flags.addAll(b.flags);
 		this.damage = b.damage;
 		this.amount = b.amount;
 		return this;
@@ -659,7 +660,9 @@ public class ItemBuilder {
 		if (this.enchantments.size() > 0) {
 			this.item.addUnsafeEnchantments(this.enchantments);
 		}
-		this.meta = this.item.getItemMeta();
+		if (meta == null) {
+			this.meta = this.item.getItemMeta();
+		}
 		if (this.displayname != null) {
 			this.meta.setDisplayName(this.displayname);
 		}
@@ -672,12 +675,18 @@ public class ItemBuilder {
 				this.meta.addItemFlags(f);
 			}
 		}
+		if (skullOwner != null) {
+			((SkullMeta) meta).setOwner(skullOwner);
+		}
+		if (fireworkEffect != null) {
+			((FireworkEffectMeta) meta).setEffect(this.fireworkEffect);
+		}
 		this.item.setItemMeta(this.meta);
 		return this.item;
 	}
 
 	/** Contains NBT Tags Methods */
-	public class Unsafe {
+	public static class Unsafe {
 
 		/** Do not access using this Field */
 		protected final ReflectionUtils utils = new ReflectionUtils();
@@ -692,12 +701,13 @@ public class ItemBuilder {
 
 		/**
 		 * Sets a NBT Tag {@code String} into the NBT Tag Compound of the Item
-		 * 
-		 * @param key   The Name on which the NBT Tag should be saved
+		 *
+		 * @param key The Name on which the NBT Tag should be saved
 		 * @param value The Value that should be saved
 		 */
 		public Unsafe setString(String key, String value) {
 			this.builder.item = this.utils.setString(this.builder.item, key, value);
+			this.builder.meta = this.builder.item.getItemMeta();
 			return this;
 		}
 
@@ -708,12 +718,13 @@ public class ItemBuilder {
 
 		/**
 		 * Sets a NBT Tag {@code Integer} into the NBT Tag Compound of the Item
-		 * 
-		 * @param key   The Name on which the NBT Tag should be savbed
+		 *
+		 * @param key The Name on which the NBT Tag should be savbed
 		 * @param value The Value that should be saved
 		 */
 		public Unsafe setInt(String key, int value) {
 			this.builder.item = this.utils.setInt(this.builder.item, key, value);
+			this.builder.meta = this.builder.item.getItemMeta();
 			return this;
 		}
 
@@ -724,12 +735,13 @@ public class ItemBuilder {
 
 		/**
 		 * Sets a NBT Tag {@code Double} into the NBT Tag Compound of the Item
-		 * 
-		 * @param key   The Name on which the NBT Tag should be savbed
+		 *
+		 * @param key The Name on which the NBT Tag should be savbed
 		 * @param value The Value that should be saved
 		 */
 		public Unsafe setDouble(String key, double value) {
 			this.builder.item = this.utils.setDouble(this.builder.item, key, value);
+			this.builder.meta = this.builder.item.getItemMeta();
 			return this;
 		}
 
@@ -740,12 +752,13 @@ public class ItemBuilder {
 
 		/**
 		 * Sets a NBT Tag {@code Boolean} into the NBT Tag Compound of the Item
-		 * 
-		 * @param key   The Name on which the NBT Tag should be savbed
+		 *
+		 * @param key The Name on which the NBT Tag should be savbed
 		 * @param value The Value that should be saved
 		 */
 		public Unsafe setBoolean(String key, boolean value) {
 			this.builder.item = this.utils.setBoolean(this.builder.item, key, value);
+			this.builder.meta = this.builder.item.getItemMeta();
 			return this;
 		}
 
@@ -765,10 +778,10 @@ public class ItemBuilder {
 		}
 
 		/**
-		 * This Class contains highly sensitive NMS Code that should not be touched
-		 * unless you want to break the ItemBuilder
+		 * This Class contains highly sensitive NMS Code that should not be touched unless you want
+		 * to break the ItemBuilder
 		 */
-		private class ReflectionUtils {
+		private static class ReflectionUtils {
 
 			public String getString(ItemStack item, String key) {
 				Object compound = this.getNBTTagCompound(this.getItemAsNMSStack(item));
@@ -776,8 +789,10 @@ public class ItemBuilder {
 					return null;
 				}
 				try {
-					return (String) compound.getClass().getMethod("getString", String.class).invoke(compound, key);
-				} catch (IllegalAccessException | InvocationTargetException | NoSuchMethodException ex) {
+					return (String) compound.getClass().getMethod("getString", String.class)
+							.invoke(compound, key);
+				} catch (IllegalAccessException | InvocationTargetException |
+						NoSuchMethodException ex) {
 					ex.printStackTrace();
 				}
 				return null;
@@ -790,9 +805,11 @@ public class ItemBuilder {
 					compound = this.getNewNBTTagCompound();
 				}
 				try {
-					compound.getClass().getMethod("setString", String.class, String.class).invoke(compound, key, value);
-					nmsItem = this.setNBTTag(compound, nmsItem);
-				} catch (IllegalAccessException | InvocationTargetException | NoSuchMethodException ex) {
+					compound.getClass().getMethod("setString", String.class, String.class)
+							.invoke(compound, key, value);
+					this.setNBTTag(compound, nmsItem);
+				} catch (IllegalAccessException | InvocationTargetException |
+						NoSuchMethodException ex) {
 					ex.printStackTrace();
 				}
 				return this.getItemAsBukkitStack(nmsItem);
@@ -804,8 +821,10 @@ public class ItemBuilder {
 					return 0;
 				}
 				try {
-					return (Integer) compound.getClass().getMethod("getInt", String.class).invoke(compound, key);
-				} catch (IllegalAccessException | InvocationTargetException | NoSuchMethodException ex) {
+					return (Integer) compound.getClass().getMethod("getInt", String.class)
+							.invoke(compound, key);
+				} catch (IllegalAccessException | InvocationTargetException |
+						NoSuchMethodException ex) {
 					ex.printStackTrace();
 				}
 				return -1;
@@ -818,9 +837,11 @@ public class ItemBuilder {
 					compound = this.getNewNBTTagCompound();
 				}
 				try {
-					compound.getClass().getMethod("setInt", String.class, int.class).invoke(compound, key, value);
-					nmsItem = this.setNBTTag(compound, nmsItem);
-				} catch (IllegalAccessException | InvocationTargetException | NoSuchMethodException ex) {
+					compound.getClass().getMethod("setInt", String.class, int.class)
+							.invoke(compound, key, value);
+					this.setNBTTag(compound, nmsItem);
+				} catch (IllegalAccessException | InvocationTargetException |
+						NoSuchMethodException ex) {
 					ex.printStackTrace();
 				}
 				return this.getItemAsBukkitStack(nmsItem);
@@ -832,8 +853,10 @@ public class ItemBuilder {
 					return 0;
 				}
 				try {
-					return (Double) compound.getClass().getMethod("getDouble", String.class).invoke(compound, key);
-				} catch (IllegalAccessException | InvocationTargetException | NoSuchMethodException ex) {
+					return (Double) compound.getClass().getMethod("getDouble", String.class)
+							.invoke(compound, key);
+				} catch (IllegalAccessException | InvocationTargetException |
+						NoSuchMethodException ex) {
 					ex.printStackTrace();
 				}
 				return Double.NaN;
@@ -846,9 +869,11 @@ public class ItemBuilder {
 					compound = this.getNewNBTTagCompound();
 				}
 				try {
-					compound.getClass().getMethod("setDouble", String.class, double.class).invoke(compound, key, value);
-					nmsItem = this.setNBTTag(compound, nmsItem);
-				} catch (IllegalAccessException | InvocationTargetException | NoSuchMethodException ex) {
+					compound.getClass().getMethod("setDouble", String.class, double.class)
+							.invoke(compound, key, value);
+					this.setNBTTag(compound, nmsItem);
+				} catch (IllegalAccessException | InvocationTargetException |
+						NoSuchMethodException ex) {
 					ex.printStackTrace();
 				}
 				return this.getItemAsBukkitStack(nmsItem);
@@ -860,8 +885,10 @@ public class ItemBuilder {
 					return false;
 				}
 				try {
-					return (Boolean) compound.getClass().getMethod("getBoolean", String.class).invoke(compound, key);
-				} catch (IllegalAccessException | InvocationTargetException | NoSuchMethodException ex) {
+					return (Boolean) compound.getClass().getMethod("getBoolean", String.class)
+							.invoke(compound, key);
+				} catch (IllegalAccessException | InvocationTargetException |
+						NoSuchMethodException ex) {
 					ex.printStackTrace();
 				}
 				return false;
@@ -874,11 +901,11 @@ public class ItemBuilder {
 					compound = this.getNewNBTTagCompound();
 				}
 				try {
-					compound.getClass()
-							.getMethod("setBoolean", String.class, boolean.class)
+					compound.getClass().getMethod("setBoolean", String.class, boolean.class)
 							.invoke(compound, key, value);
-					nmsItem = this.setNBTTag(compound, nmsItem);
-				} catch (IllegalAccessException | InvocationTargetException | NoSuchMethodException ex) {
+					this.setNBTTag(compound, nmsItem);
+				} catch (IllegalAccessException | InvocationTargetException |
+						NoSuchMethodException ex) {
 					ex.printStackTrace();
 				}
 				return this.getItemAsBukkitStack(nmsItem);
@@ -890,31 +917,32 @@ public class ItemBuilder {
 					return false;
 				}
 				try {
-					return (Boolean) compound.getClass().getMethod("hasKey", String.class).invoke(compound, key);
-				} catch (IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
-					e.printStackTrace();
+					return (Boolean) compound.getClass().getMethod("hasKey", String.class)
+							.invoke(compound, key);
+				} catch (IllegalAccessException | InvocationTargetException |
+						NoSuchMethodException e) {
+					throw new RuntimeException(e);
 				}
-				return false;
 			}
 
 			public Object getNewNBTTagCompound() {
 				String ver = Bukkit.getServer().getClass().getName().split("\\.")[3];
 				try {
-					return Class.forName("net.minecraft.server." + ver + ".NBTTagCompound").newInstance();
-				} catch (ClassNotFoundException | IllegalAccessException | InstantiationException ex) {
-					ex.printStackTrace();
+					return Class.forName("net.minecraft.server." + ver + ".NBTTagCompound")
+							.getConstructor().newInstance();
+				} catch (ClassNotFoundException | IllegalAccessException | InstantiationException |
+						InvocationTargetException | NoSuchMethodException ex) {
+					throw new RuntimeException(ex);
 				}
-				return null;
 			}
 
-			public Object setNBTTag(Object tag, Object item) {
+			public void setNBTTag(Object tag, Object item) {
 				try {
 					item.getClass().getMethod("setTag", tag.getClass()).invoke(item, tag);
-					return item;
-				} catch (IllegalAccessException | InvocationTargetException | NoSuchMethodException ex) {
-					ex.printStackTrace();
+				} catch (IllegalAccessException | InvocationTargetException |
+						NoSuchMethodException ex) {
+					throw new RuntimeException(ex);
 				}
-				return null;
 			}
 
 			public Object getNBTTagCompound(Object nmsStack) {
@@ -923,7 +951,8 @@ public class ItemBuilder {
 						return null;
 					}
 					return nmsStack.getClass().getMethod("getTag").invoke(nmsStack);
-				} catch (IllegalAccessException | InvocationTargetException | NoSuchMethodException ex) {
+				} catch (IllegalAccessException | InvocationTargetException |
+						NoSuchMethodException ex) {
 					ex.printStackTrace();
 				}
 				return null;
@@ -931,19 +960,22 @@ public class ItemBuilder {
 
 			public Object getItemAsNMSStack(ItemStack item) {
 				try {
-					Method m = this.getCraftItemStackClass().getMethod("asNMSCopy", ItemStack.class);
+					Method m =
+							this.getCraftItemStackClass().getMethod("asNMSCopy", ItemStack.class);
 					return m.invoke(null, item);
-				} catch (NoSuchMethodException | IllegalAccessException | InvocationTargetException ex) {
-					ex.printStackTrace();
+				} catch (NoSuchMethodException | IllegalAccessException |
+						InvocationTargetException ex) {
+					throw new RuntimeException(ex);
 				}
-				return null;
 			}
 
 			public ItemStack getItemAsBukkitStack(Object nmsStack) {
 				try {
-					Method m = this.getCraftItemStackClass().getMethod("asBukkitCopy", nmsStack.getClass());
+					Method m = this.getCraftItemStackClass()
+							.getMethod("asBukkitCopy", nmsStack.getClass());
 					return (ItemStack) m.invoke(null, nmsStack);
-				} catch (NoSuchMethodException | InvocationTargetException | IllegalAccessException ex) {
+				} catch (NoSuchMethodException | InvocationTargetException |
+						IllegalAccessException ex) {
 					ex.printStackTrace();
 				}
 				return null;
@@ -952,11 +984,11 @@ public class ItemBuilder {
 			public Class<?> getCraftItemStackClass() {
 				String ver = Bukkit.getServer().getClass().getName().split("\\.")[3];
 				try {
-					return Class.forName("org.bukkit.craftbukkit." + ver + ".inventory.CraftItemStack");
+					return Class.forName(
+							"org.bukkit.craftbukkit." + ver + ".inventory.CraftItemStack");
 				} catch (ClassNotFoundException ex) {
-					ex.printStackTrace();
+					throw new RuntimeException(ex);
 				}
-				return null;
 			}
 
 		}
